# qraku

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  GCP_SSH_SETUP_GUIDE.md  README.md  UUID.md  alembic.ini  backend_order_test.py  check_server.py  copy_images.py  db_diag.txt  db_menu_diag.txt  deploy.py  docker-compose.yml  fetch_log.py  generate_themes.py  package-lock.json  pyproject.toml  record.md  replace_colors.js  restart_uvicorn.sh  run_backend.bat  run_frontend.bat  run_frontend_react.bat  setup_server.sh  start_all.bat  test_db.py  test_menu_db.py  test_order.py  upload.py
agents/: architect.md  backend-reliability.md  data-migration-engineer.md  db-migration-architect.md  postgres-specialist.md  websocket-specialist.md
alembic/: env.py
backend/: .env.example  .gitignore  alembic_pos_update.py  check_menus.py  claude.md  database.py  init_data.py  main.py  migrate_kitchen_mode.py  migrate_menu_options.py  migrate_v4_languages.py  models.py  requirements.txt  reseed_demo.py  seed_3x3x3.py  seed_7digit.py  seed_data.py  seed_samples.py  seed_table_1234567.py  seed_tables_1234567.py  test_api_v2.py  test_batch.py  test_business_hours.py  test_image_pipeline.py  test_qr.py  update_store_themes.py
backend/routers/: ai.py  (+37 more)
docs/: architecture.md  coding-rules.md  deployment.md  payment-rules.md  payment_setup_guide.html  takeout-no-fulfillment-refund.md  websocket-rules.md
frontend-react/: .gitignore  Dockerfile.dev  claude.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
tasks/: HANDOFF-NEXT-SESSION.md  claude-parallel-handoff-pg-cap05-dt-migrate02.md  codex-survey-2026-05-21.md  current-tasks.md  db-migration-audit.md  db-migration-runbook.md  gpt-crosscheck-instructions.md  gpt-p1-capacity-review.md  gpt-p1-date-grouping-review.md  gpt-p1-datetime-review.md  gpt-p1-init-db-race-review.md  gpt-paypay-auto-order-review.md  gpt-pg-cap05-review.md  gpt-pg-cap05d-review.md  gpt-pg-dt-dg-04-review.md  gpt-pg-dt-migrate-02-review.md  gpt-pg-dt-migrate-02a-impl-review.md  gpt-pg-risk-review-instructions.md  gpt-pg-verification-review-instructions.md  gpt-pg-verification-review.md  p1-cap05-translate-task-refactor-analysis.md  p1-capacity-model-analysis.md  p1-date-grouping-utc-day-analysis.md  p1-datetime-utc-migration-analysis.md  p1-dt-dg-04-hotpath-utc-range-analysis.md  p1-dt-migrate-02-utcnow-classification-analysis.md  p1-init-db-race-analysis.md  pending-review.md  pg-cutover-risk-audit.md  pg-cutover-verification-results.md  sec-audit-report.md  security-hardening-report-2026-06-14.md  spc-spec.md  stb-spec.md  work-log.md  zaira-gpt-send-prompt-paypay-auto-order.md  zaira-gpt-send-prompt-pg-cap05d.md  zaira-gpt-send-prompt-pg-dt-migrate-02a-impl.md  zaira-gpt-send-prompts-pg-cap05-dt-migrate02.md  zaira-next-session-start-message.md
(+249 files in other folders)
