[project]
name = "qraku"
version = "0.1.0"
description = "QRaku — QR-based restaurant ordering system"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "cryptography",
    "qrcode[pil]",
    "python-multipart",
    "jinja2",
    "websockets",
    "passlib[bcrypt]",
    "google-genai",
    "python-dotenv",
    "reportlab",
    "pytz",
    "stripe",
    "httpx",
    "python-jose[cryptography]",
    "Pillow",
    "google-cloud-storage",
    "paramiko",
    "redis>=5.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "dramatiq[redis]>=1.16",
    "alembic>=1.13",
    # [2026-05-22] tzdata: Windows/Python 3.12 의 zoneinfo 가 ZoneInfo("Asia/Tokyo")
    # 미해석 (ZoneInfoNotFoundError). Linux 는 시스템 tzdata 사용하지만 Windows 는
    # 별도 패키지 필요. GPT cross-review (gpt-pg-dt-migrate-02-review.md §C) 권고.
    "tzdata>=2024.1",
]

[tool.uv]
package = false
